CSS Animation: Support font-weight bold

https://drafts.csswg.org/css-fonts-3/#font-weight-prop
The implementation previously supported
'normal', 'bolder', 'lighter' but not 'bold'.

BUG=778224

Change-Id: Iec5976195faa43f7f1e3fd628f73a85017361cab
Reviewed-on: https://chromium-review.googlesource.com/737395
Commit-Queue: Dominik Röttsches <drott@chromium.org>
Reviewed-by: Dominik Röttsches <drott@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511761}
Former-commit-id: 64bffda61f3eaa0fe121fe621ea776a1c3f78419